# Kantify

./: README.md  next.config.ts
docs/: blueprint.md
rag/: .gitignore  README_DILEMMA_RAG.md  __init__.py  create_database.py  generate_dilemma_rag.py  get_embedding_function.py  test_dilemma_generator.py
rag/api/: __init__.py  models.py  routes.py  server.py
rag/config/: pyproject.toml  requirements_api.txt
rag/core/: __init__.py  create_database.py  generate_dilemma_rag.py  query_data.py
rag/docs/: API.md  RAG.md  README.md
rag/scripts/: start_server.py  test_api.py  test_rag.py
src/ai/: dev.ts
src/ai/flows/: generate-dilemma.ts  kantian-reflection-narrative.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/dilemmas/: page.tsx
src/app/profile/: page.tsx
src/components/: EthicalCompassLogo.tsx  KantifyLogo.tsx  Navbar.tsx
src/contexts/: AppContext.tsx
src/data/: corpus_dilemas.json
src/lib/: api-client.ts  types.ts
