[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.9",
    "langchain>=0.3.25",
    "langchain-aws>=0.2.23",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.17",
    "pypdf>=5.5.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=4.1.0",
]
